--- a/backend/scripts/requirements.txt
+++ b/backend/scripts/requirements.txt
@@ -41,6 +41,7 @@ pydantic_core==2.27.2
 PyJWT==2.10.1
 pyparsing==3.2.1
 pytest==8.3.4
+python-dotenv==1.0.1
 requests==2.32.3
 rsa==4.9
 sniffio==1.3.1
