--- a/backend/scripts/requirements.txt
+++ b/backend/scripts/requirements.txt
@@ -1,17 +1,21 @@
+altgraph @ file:///AppleInternal/Library/BuildRoots/2c89a47b-9dd5-11ef-938f-6e654a286000/Library/Caches/com.apple.xbs/Sources/python3/altgraph-0.17.2-py2.py3-none-any.whl
 annotated-types==0.7.0
-anyio==4.8.0
+anyio==3.7.1
+-e git+https://github.com/lidiamcfreitas/budget-api.git@f8d7f1c90a51c5f6f106f8b5240a080b1b8772cf#egg=budget_api&subdirectory=backend
 CacheControl==0.14.2
 cachetools==5.5.1
 certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
-cryptography==44.0.1
+cryptography==44.0.0
 dnspython==2.7.0
+ecdsa==0.19.0
 email_validator==2.2.0
 exceptiongroup==1.2.2
-fastapi==0.115.8
+fastapi==0.104.1
 firebase-admin==6.6.0
+future @ file:///AppleInternal/Library/BuildRoots/2c89a47b-9dd5-11ef-938f-6e654a286000/Library/Caches/com.apple.xbs/Sources/python3/future-0.18.2-py3-none-any.whl
 google-api-core==2.24.1
 google-api-python-client==2.160.0
 google-auth==2.38.0
@@ -21,13 +25,16 @@ google-cloud-firestore==2.20.0
 google-cloud-storage==3.0.0
 google-crc32c==1.6.0
 google-resumable-media==2.7.2
-googleapis-common-protos==1.67.0
+googleapis-common-protos==1.66.0
 grpcio==1.70.0
 grpcio-status==1.70.0
 h11==0.14.0
+httpcore==0.17.3
 httplib2==0.22.0
+httpx==0.24.1
 idna==3.10
 iniconfig==2.0.0
+macholib @ file:///AppleInternal/Library/BuildRoots/2c89a47b-9dd5-11ef-938f-6e654a286000/Library/Caches/com.apple.xbs/Sources/python3/macholib-1.15.2-py2.py3-none-any.whl
 msgpack==1.1.0
 packaging==24.2
 pluggy==1.5.0
@@ -37,17 +44,23 @@ pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pycparser==2.22
 pydantic==2.10.6
+pydantic-to-typescript==2.0.0
 pydantic_core==2.27.2
 PyJWT==2.10.1
 pyparsing==3.2.1
+PyPDF2==3.0.1
 pytest==8.3.4
+pytest-asyncio==0.25.3
 python-dotenv==1.0.1
+python-jose==3.3.0
+python-multipart==0.0.6
 requests==2.32.3
 rsa==4.9
+six @ file:///AppleInternal/Library/BuildRoots/2c89a47b-9dd5-11ef-938f-6e654a286000/Library/Caches/com.apple.xbs/Sources/python3/six-1.15.0-py2.py3-none-any.whl
 sniffio==1.3.1
-starlette==0.45.3
+starlette==0.27.0
 tomli==2.2.1
 typing_extensions==4.12.2
 uritemplate==4.1.1
 urllib3==2.3.0
-uvicorn==0.34.0
+uvicorn==0.24.0
