--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,13 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "axios": "^1.7.9",
     "firebase": "^11.3.1",
     "pinia": "^3.0.1",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vuetify": "^3.7.0-beta.1"
   },
   "devDependencies": {
     "@types/axios": "^0.9.36",
@@ -30,8 +32,9 @@
     "eslint-plugin-vue": "^8.0.3",
     "jsdom": "^26.0.0",
     "prettier": "^2.4.1",
-    "typescript": "~4.5.5",
+    "typescript": "^5.7.3",
     "vite": "^6.1.0",
+    "vite-plugin-vuetify": "^2.1.0",
     "vitest": "^1.6.1",
     "vue-tsc": "^1.8.27"
   }
