--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,10 +26,12 @@
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/eslint-config-typescript": "^9.1.0",
     "@vue/test-utils": "^2.4.6",
+    "cypress": "^14.0.3",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
+    "happy-dom": "^17.1.0",
     "jsdom": "^26.0.0",
     "prettier": "^2.4.1",
     "typescript": "^5.7.3",
