--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,10 +15,10 @@
     "firebase": "^11.3.1",
     "pinia": "^3.0.1",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3",
-    "vuetify": "^3.7.0-beta.1"
+    "vue-router": "^4.0.3"
   },
   "devDependencies": {
+    "@pinia/testing": "^1.0.0",
     "@types/axios": "^0.9.36",
     "@types/node": "^22.13.4",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
@@ -38,6 +38,7 @@
     "vite": "^6.1.0",
     "vite-plugin-vuetify": "^2.1.0",
     "vitest": "^1.6.1",
-    "vue-tsc": "^1.8.27"
+    "vue-tsc": "^1.8.27",
+    "vuetify": "^3.7.12"
   }
 }
